--- a/style.css
+++ b/style.css
@@ -1,31 +1,68 @@
 body{
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
     background-color: #f4f4f4e1;
 }
-ul{
-   
+header, footer{
+    background-color: darkgray;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    color: white;
+    text-align: center;
+    max-height: 500px;
+}
+main{
+    height: 500px;
+    margin: 15px;
+}
+ul{ 
     display: flex;
     list-style: none;
 }
 ul li{
     position: relative;
-    width: 250px;
-    height: 50px;
+    width: 275px;
+    height: 75px;
     border-radius: 5px;
-    border: 1px ridge coral;
+    background-color: #B0B0B0;
+    font-weight: bold;
     margin-right: 10px;
-    background-color: #ff7f50;
 }
-.delete{
+.deleteList{
     position: absolute;
     right: 0;
     top: 0;
-    cursor: pointer;
     background:transparent;
     border:none;
     outline:none;
     display:block;
+    font-weight: bold;
+}
+.deleteList:hover{
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background-color: gray;
+}
+.addCard{
+    background:transparent;
+    border:none;
+    outline:none;
+    display:block;
+    opacity: 1;
+    color: white;
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    font-weight: bold;
+}
+.addCard:hover{
+    cursor: pointer;
+    width: 275px;
+    height: 20px;
+    background-color: gray;
 }
 
 
