--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ main{
     height: 500px;
     margin: 15px;
 }
-ul{ 
+ul{
     display: flex;
     list-style: none;
 }
 ul li{
     position: relative;
     width: 275px;
-    height: 75px;
+    height: 70px;
     border-radius: 5px;
     background-color: #B0B0B0;
     font-weight: bold;
@@ -52,10 +52,10 @@ ul li{
     outline:none;
     display:block;
     opacity: 1;
-    color: white;
-    position: absolute;
+    color: #000; /* Changed color to black so it can more easily be seen */
+    /*position: absolute; Removed position absolute so that the add card button is positioned beneath each new card*/
+    position: relative;
     left: 0;
-    bottom: 5px;
     font-weight: bold;
 }
 .addCard:hover{
@@ -65,4 +65,63 @@ ul li{
     background-color: gray;
 }
 
+.item-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 50px;
+}
 
+.list-item {
+  background-color: #727292;
+  height: 80px;
+  width: 100%;
+  margin-bottom: 2px;
+  position: relative;
+}
+
+textarea {
+  width: 94%;
+  height: 80%;
+  margin-left: 6px;
+  margin-top: 6px;
+  background-color: #ffffff00;
+  border: transparent;
+  outline: none;
+  resize: none;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+textarea:focus {
+  background-color: #ffffff45;
+  color: #000;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.delete-item {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 20px;
+  bottom: 28px;
+  left: 86%;
+  outline: none;
+  border: none;
+  padding-left: 8px;
+  cursor: pointer;
+}
+
+.list-title {
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  outline: none;
+  margin-left: 5px;
+}
+
+.addList-input {
+  outline: none;
+}
