--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ ul{
 ul li{
     position: relative;
     width: 275px;
-    height: 70px;
+    height: 100%;
     border-radius: 5px;
-    background-color: #B0B0B0;
+    background-color: #e0e0e073;
     font-weight: bold;
     margin-right: 10px;
 }
@@ -57,6 +57,8 @@ ul li{
     position: relative;
     left: 0;
     font-weight: bold;
+    margin-bottom: 6px;
+    margin-top: -5px;
 }
 .addCard:hover{
     cursor: pointer;
@@ -77,6 +79,12 @@ ul li{
   width: 100%;
   margin-bottom: 2px;
   position: relative;
+  background-color: #ffffff;
+  height: 80px;
+  width: 93%;
+  margin-bottom: 10px;
+  position: relative;
+  margin-left: 10px;
 }
 
 textarea {
@@ -84,7 +92,7 @@ textarea {
   height: 80%;
   margin-left: 6px;
   margin-top: 6px;
-  background-color: #ffffff00;
+  background-color: #ffffff;
   border: transparent;
   outline: none;
   resize: none;
@@ -93,13 +101,12 @@ textarea {
 }
 
 textarea:focus {
-  background-color: #ffffff45;
   color: #000;
 }
 
-textarea::-webkit-input-placeholder {
+/*textarea::-webkit-input-placeholder {
   color: #fff;
-}
+}*/
 
 .delete-item {
   position: absolute;
@@ -112,6 +119,7 @@ textarea::-webkit-input-placeholder {
   border: none;
   padding-left: 8px;
   cursor: pointer;
+  background-color: yellow;
 }
 
 .list-title {
@@ -120,6 +128,8 @@ textarea::-webkit-input-placeholder {
   font-size: 18px;
   outline: none;
   margin-left: 5px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 .addList-input {
