--- a/style.css
+++ b/style.css
@@ -125,11 +125,6 @@ ul li{
 }
 
 .list-item {
-  background-color: #727292;
-  height: 80px;
-  width: 100%;
-  margin-bottom: 2px;
-  position: relative;
   background-color: #ffffff;
   height: 80px;
   width: 93%;
@@ -140,12 +135,14 @@ ul li{
   font-size: 10px;
 }
 
+.list-item:hover {
+  background-color: #fffbbeb5;
+}
+
 textarea {
   width: 94%;
   height: 80%;
-  margin-left: 6px;
-  margin-top: 6px;
-  background-color: #ffffff;
+  background-color: transparent;
   border: transparent;
   outline: none;
   resize: none;
@@ -170,7 +167,6 @@ textarea:focus {
   left: 86%;
   outline: none;
   border: none;
-  padding-left: 8px;
   cursor: pointer;
   background-color: yellow;
 }
@@ -180,7 +176,7 @@ textarea:focus {
   border: none;
   font-size: 18px;
   outline: none;
-  margin-left: 5px;
+  margin-left: 8px;
   margin-top: 3px;
   margin-bottom: 3px;
 }
