Added placeholder message after clicking add list button without input and removed delete list confirmation message

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ ul li{
   margin-right: 10px;
   overflow: scroll;
 }
+/* pseudo class to add red color to placeholder after clicking add list button */
+.inputAddList__placeholder::placeholder{
+  color: red;
+}
 .deleteList{
   position: absolute;
   right: 0;
