dragdrop in progress

--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ ul li{
   margin-left: 10px;
   text-align: end;
   font-size: 10px;
+  /*for drag&drop -- Ricardo */
+  /* check if can i drop direct from textarea*/
+  cursor: move;
 }
 
 .list-item:hover {
