--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ main{
   border-style: none;
   font-size: 13px;
   padding-bottom: 2px;
-  padding-top: 0px;
+  padding-top: -1px;
+  width: 170px;
 }
 
 #btnAddList{
@@ -187,26 +188,44 @@ textarea:focus {
 
 /* classes for popup and .. --Ricardo */
 
-.popup-container{
+.popup-background {
+  display: none;
+  position: relative;
   position: fixed;
   box-sizing: border-box;
-  background-color: #ffeb3b;
+  background-color: transparent;
   z-index: 100;
   width: 300px;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.popup-container{
+  background-color: #ffeb3b;
+  width: 300px;
   min-height: 400px;
-  top: 10%;
-  left: 30%;
   border-radius: 10px;
   word-wrap: break-word;
-
+  margin: 0 auto;
+  position: relative;
+  top: 100px;
 }
 
 .popup-container__title{
   box-sizing: border-box;
   margin: 15px 20px;
   text-align: left;
-  
-
+  box-sizing: border-box;
+  margin: 15px 20px;
+  background-color: transparent;
+  outline: none;
+  border-style: none;
+  margin-right: 150px;
+  height: 20px;
+  width: 260px;
+  font-size: 13px;
 }
 
 .popup-container__datum{
@@ -222,13 +241,13 @@ textarea:focus {
   margin: 20px 20px;
   padding-right: 20px;
   font-size: 18px;
-  
+
 }
 
 .popup-container__button{
   position: absolute;
   bottom: 15px;
   right: 20px;
-  
+
 
 }
