--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ textarea:focus {
 
 .popup-container{
   background-color: #ffeb3b;
-  width: 300px;
+  width: 600px;
   min-height: 400px;
   border-radius: 10px;
   word-wrap: break-word;
@@ -242,12 +242,17 @@ textarea:focus {
   font-size: 16px;
   margin-bottom: 0;
 }
+.popup-container__title:focus{
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 2px solid blue;
+}
 
 .popup-container__datum{
   box-sizing: border-box;
   margin: 15px 20px;
-  text-align: left;
-  font-size: 18px;
+  text-align: right;
+  font-size: 12px;
 }
 
 .popup-container__textarea{
@@ -256,13 +261,26 @@ textarea:focus {
   padding-right: 20px;
   font-size: 18px;
 }
+.popup-container__textarea:focus{
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 2px solid blue;
+}
 
 .popup-container__button{
   position: absolute;
   bottom: 15px;
   right: 20px;
+  background:transparent;
+  border:none;
+  outline:none;
+  display:block;
+  font-weight: bold;
 }
-
+.popup-container__button:hover{
+  cursor: pointer;
+  background-color: 	#CCCC00;
+}
 .hold{
   border: solid #ffeb3b 4px;
 }
